[package]
name = "deucalion-libs"
version = "1.1.0"
edition = "2021"

[dependencies]
bytes = "1"
futures = "0.3"
tokio = { version = "1.38.0", features = [
    "io-util",
    "sync",
    "rt",
    "rt-multi-thread",
    "net",
    "time",
    "macros",
] }
tokio-util = { version = "0.7.11", features = ["codec", "compat"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "minwindef",
    "minwinbase",
    "processthreadsapi",
    "libloaderapi",
    "consoleapi",
    "wincon",
    "tlhelp32",
] }
